Add dependencies version to package.json

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
         "ejs-locals": "",
         "connect-mongo": "",
         "async": "",
-        "connect": "",
+        "connect": "2.9.0",
         "cookie": "",
-        "socket.io": "",
+        "socket.io": "0.9.16",
         "config": "",
         "supervisor": ""
     }
