--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "cookie": "",
         "socket.io": "0.9.16",
         "config": "",
-        "supervisor": ""
+        "supervisor": "",
+        "sanitizer": ""
     }
 }
