--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
     },
     "dependencies": {
         "express": "4.2.0",
-        "ejs": "*",
-        "body-parser": "",
-        "cookie-parser": "",
-        "express-session": "",
-        "nconf": "",
-        "winston": "",
-        "mongoose": "",
-        "ejs-locals": "",
-        "connect-mongo": "",
-        "async": "",
+        "ejs": "1.0.0",
+        "body-parser": "1.4.3",
+        "cookie-parser": "1.3.2",
+        "express-session": "1.5.2",
+        "nconf": "0.6.9",
+        "winston": "0.7.3",
+        "mongoose": "3.8.12",
+        "ejs-locals": "1.0.2",
+        "connect-mongo": "0.4.1",
+        "async": "0.*.*",
         "connect": "2.9.0",
-        "cookie": "",
+        "cookie": "0.1.*",
         "socket.io": "0.9.16",
-        "config": "",
-        "supervisor": "",
-        "sanitizer": ""
+        "config": "0.4.36",
+        "sanitizer": "0.1.1",
+        "bower": ""
     }
 }
