--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-    "name": "chat",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "start": "node app.js"
-    },
-    "dependencies": {
-        "express": "4.2.0",
-        "ejs": "1.0.0",
-        "body-parser": "1.4.3",
-        "cookie-parser": "1.3.2",
-        "express-session": "1.5.2",
-        "nconf": "0.6.9",
-        "winston": "0.7.3",
-        "mongoose": "3.8.12",
-        "ejs-locals": "1.0.2",
-        "connect-mongo": "0.4.1",
-        "async": "0.*.*",
-        "connect": "2.9.0",
-        "cookie": "0.1.*",
-        "socket.io": "0.9.16",
-        "config": "0.4.36",
-        "sanitizer": "0.1.1",
-        "bower": ""
-    }
+  "name": "chat",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "async": "0.*.*",
+    "body-parser": "1.4.3",
+    "bower": "",
+    "config": "0.4.36",
+    "connect": "2.9.0",
+    "connect-mongo": "0.4.1",
+    "cookie": "0.1.*",
+    "cookie-parser": "1.3.2",
+    "ejs": "1.0.0",
+    "ejs-locals": "1.0.2",
+    "express": "4.2.0",
+    "express-session": "1.5.2",
+    "mongoose": "3.8.12",
+    "morgan": "1.1.1",
+    "nconf": "0.6.9",
+    "sanitizer": "0.1.1",
+    "socket.io": "0.9.16",
+    "winston": "0.7.3"
+  }
 }
