--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs-locals": "1.0.2",
     "express": "4.2.0",
     "express-session": "1.5.2",
+    "lodash": "^2.4.1",
     "mongoose": "3.8.12",
     "morgan": "1.1.1",
     "nconf": "0.6.9",
